# AutoFileOrganizer

./: .gitignore  README.md  cloud.md  design.md  plan.md  pyproject.toml
.github/workflows/: ci.yml
src/autofileorganizer/: __init__.py  categories.py  cli.py  organizer.py  report.py  scanner.py  utils.py
tests/: test_categories.py  test_cli.py  test_organizer.py  test_report.py  test_scanner.py  test_utils.py
